[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/models/SiedlungRed.glb" type="PackedScene" id=1]
[ext_resource path="res://Game/models/SiedlungGreen.glb" type="PackedScene" id=2]
[ext_resource path="res://Game/models/StadtYellow.glb" type="PackedScene" id=3]
[ext_resource path="res://Game/models/SiedlungBlue.glb" type="PackedScene" id=4]
[ext_resource path="res://Game/models/SiedlungYellow.glb" type="PackedScene" id=5]
[ext_resource path="res://Game/models/StadtGreen.glb" type="PackedScene" id=6]
[ext_resource path="res://Game/models/StadtBlue.glb" type="PackedScene" id=7]
[ext_resource path="res://Game/models/StadtRed.glb" type="PackedScene" id=8]
[ext_resource path="res://Game/scripts/SiedStadt.gd" type="Script" id=9]

[node name="SiedStadt" type="Spatial"]
script = ExtResource( 9 )

[node name="Siedlung" type="Spatial" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="SiedlungBlue" parent="Siedlung" instance=ExtResource( 4 )]

[node name="SiedlungGreen" parent="Siedlung" instance=ExtResource( 2 )]
visible = false

[node name="SiedlungRed" parent="Siedlung" instance=ExtResource( 1 )]
visible = false

[node name="SiedlungYellow" parent="Siedlung" instance=ExtResource( 5 )]
visible = false

[node name="Staedte" type="Spatial" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="StadtBlue" parent="Staedte" instance=ExtResource( 7 )]
visible = false

[node name="StadtGreen" parent="Staedte" instance=ExtResource( 6 )]
visible = false

[node name="StadtRed" parent="Staedte" instance=ExtResource( 8 )]
visible = false

[node name="StadtYellow" parent="Staedte" instance=ExtResource( 3 )]
visible = false
